--- a/Graphite/Graphite.vcxproj
+++ b/Graphite/Graphite.vcxproj
@@ -150,6 +150,10 @@
     <ClInclude Include="src\Graphite\Application.h" />
     <ClInclude Include="src\Graphite\Core.h" />
     <ClInclude Include="src\Graphite\EntryPoint.h" />
+    <ClInclude Include="src\Graphite\Events\ApplicationEvent.h" />
+    <ClInclude Include="src\Graphite\Events\Event.h" />
+    <ClInclude Include="src\Graphite\Events\KeyEvent.h" />
+    <ClInclude Include="src\Graphite\Events\MouseEvent.h" />
     <ClInclude Include="src\Graphite\Log.h" />
   </ItemGroup>
   <ItemGroup>
