replaced glfw premake file outside submodule

--- a/Graphite/Graphite.vcxproj.filters
+++ b/Graphite/Graphite.vcxproj.filters
@@ -35,6 +35,7 @@
       <Filter>Graphite</Filter>
     </ClInclude>
     <ClInclude Include="src\gfpch.h" />
+    <ClInclude Include="src\Graphite\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Graphite\Application.cpp">
