--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "vendor/imgui"]
 	path = vendor/imgui
 	url = https://github.com/ocornut/imgui.git
+[submodule "Graphite/vendor/glm"]
+	path = Graphite/vendor/glm
+	url = https://github.com/g-truc/glm.git
