--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -1,22 +1,56 @@
 [Window][Debug##Default]
 Pos=60,60
 Size=400,400
+Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=510,166
-Size=550,989
+Pos=913,27
+Size=359,685
+Collapsed=0
+DockId=0x00000003,0
 
 [Window][Example: Log]
 Pos=211,282
 Size=1026,459
+Collapsed=0
 
 [Window][Example: Console]
 Pos=60,60
 Size=520,600
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1280,720
+Collapsed=0
+
+[Window][Settings]
+Pos=8,363
+Size=903,349
+Collapsed=0
+DockId=0x00000002,0
+
+[Window][Console]
+Pos=8,27
+Size=903,334
+Collapsed=0
+DockId=0x00000005,0
+
+[Window][DockSpace]
+Pos=0,0
+Size=1280,720
+Collapsed=0
 
 [Table][0xA43C3885,3]
 RefScale=13
 Column 0  Width=56
 Column 1  Width=56
 Column 2  Width=56
+
+[Docking][Data]
+DockSpace     ID=0x09EF459F Window=0x9A404470 Pos=8,27 Size=1264,685 Split=X
+  DockNode    ID=0x00000001 Parent=0x09EF459F SizeRef=903,685 Split=Y
+    DockNode  ID=0x00000005 Parent=0x00000001 SizeRef=1264,334 CentralNode=1 Selected=0x49278EEE
+    DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=1264,349 Selected=0x54723243
+  DockNode    ID=0x00000003 Parent=0x09EF459F SizeRef=359,685 Selected=0xE87781F4
+DockSpace     ID=0x3BC79352 Pos=8,27 Size=1264,685 CentralNode=1 Selected=0xE87781F4
 
