--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -4,11 +4,10 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1869,206
-ViewportId=0xA4D966FE
-Size=1403,812
+Pos=0,19
+Size=1280,701
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x3BC79352,0
 
 [Window][Example: Log]
 Pos=211,282
@@ -21,15 +20,14 @@ Size=520,600
 Collapsed=0
 
 [Window][DockSpace Demo]
-Size=1403,831
+Size=1280,720
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=1869,206
-ViewportId=0xA4D966FE
-Size=1403,812
+Pos=0,19
+Size=1280,778
 Collapsed=0
-DockId=0x00000001,1
+DockId=0x3FC20BEE,0
 
 [Window][Console]
 Pos=8,27
@@ -38,7 +36,8 @@ Collapsed=0
 DockId=0x09EF459F,0
 
 [Window][DockSpace]
-Size=1280,720
+Pos=0,0
+Size=1280,797
 Collapsed=0
 
 [Table][0xA43C3885,3]
@@ -48,6 +47,7 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockNode  ID=0x00000001 Pos=1869,206 Size=1403,812 Selected=0xE87781F4
-DockSpace ID=0x09EF459F Pos=8,27 Size=1264,685 CentralNode=1
+DockSpace ID=0x09EF459F Pos=585,217 Size=1280,701 CentralNode=1 Selected=0x54723243
+DockSpace ID=0x3BC79352 Pos=129,219 Size=1280,701 CentralNode=1 Selected=0xE87781F4
+DockSpace ID=0x3FC20BEE Window=0x9A404470 Pos=247,129 Size=1280,778 CentralNode=1 Selected=0x54723243
 
