--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -24,10 +24,10 @@ Size=1280,720
 Collapsed=0
 
 [Window][Settings]
-Pos=0,19
-Size=1280,778
+Pos=1243,19
+Size=296,715
 Collapsed=0
-DockId=0x3FC20BEE,0
+DockId=0x00000002,0
 
 [Window][Console]
 Pos=8,27
@@ -37,8 +37,14 @@ DockId=0x09EF459F,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1280,797
+Size=1539,734
 Collapsed=0
+
+[Window][Viewport]
+Pos=0,19
+Size=1241,715
+Collapsed=0
+DockId=0x00000001,0
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -47,7 +53,9 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockSpace ID=0x09EF459F Pos=585,217 Size=1280,701 CentralNode=1 Selected=0x54723243
-DockSpace ID=0x3BC79352 Pos=129,219 Size=1280,701 CentralNode=1 Selected=0xE87781F4
-DockSpace ID=0x3FC20BEE Window=0x9A404470 Pos=247,129 Size=1280,778 CentralNode=1 Selected=0x54723243
+DockSpace   ID=0x09EF459F Pos=585,217 Size=1280,701 CentralNode=1 Selected=0x54723243
+DockSpace   ID=0x3BC79352 Pos=129,219 Size=1280,701 CentralNode=1 Selected=0xE87781F4
+DockSpace   ID=0x3FC20BEE Window=0x9A404470 Pos=477,169 Size=1539,715 Split=X Selected=0x13926F0B
+  DockNode  ID=0x00000001 Parent=0x3FC20BEE SizeRef=1363,701 CentralNode=1 Selected=0x13926F0B
+  DockNode  ID=0x00000002 Parent=0x3FC20BEE SizeRef=296,701 Selected=0x54723243
 
