--- a/Graphite/Graphite.vcxproj.filters
+++ b/Graphite/Graphite.vcxproj.filters
@@ -10,6 +10,9 @@
     <Filter Include="src\Graphite\Core">
       <UniqueIdentifier>{881AB00A-F430-AEA0-3DA8-39C2A9FD7E28}</UniqueIdentifier>
     </Filter>
+    <Filter Include="src\Graphite\Debug">
+      <UniqueIdentifier>{A6C6BF60-92AA-80B6-FB0A-7B09E70D6B38}</UniqueIdentifier>
+    </Filter>
     <Filter Include="src\Graphite\Events">
       <UniqueIdentifier>{14EE427C-804F-208A-09BD-663C751D5749}</UniqueIdentifier>
     </Filter>
@@ -18,6 +21,9 @@
     </Filter>
     <Filter Include="src\Graphite\Renderer">
       <UniqueIdentifier>{D6D1B18F-423E-6D8A-0B32-05E8775D8FF2}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="src\Graphite\Viewport">
+      <UniqueIdentifier>{5F790161-CBE5-BC5B-94D9-54B90005DFC3}</UniqueIdentifier>
     </Filter>
     <Filter Include="src\Platform">
       <UniqueIdentifier>{21CA02E5-0D2D-9289-B6B2-CA3FA2F45D0C}</UniqueIdentifier>
@@ -60,7 +66,7 @@
     <ClInclude Include="src\Graphite\Core\Application.h">
       <Filter>src\Graphite\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphite\Core\Core.h">
+    <ClInclude Include="src\Graphite\Core\Base.h">
       <Filter>src\Graphite\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphite\Core\EntryPoint.h">
@@ -81,7 +87,7 @@
     <ClInclude Include="src\Graphite\Core\Log.h">
       <Filter>src\Graphite\Core</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphite\Core\MouseButtonCodes.h">
+    <ClInclude Include="src\Graphite\Core\MouseCodes.h">
       <Filter>src\Graphite\Core</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphite\Core\Timestep.h">
@@ -89,6 +95,9 @@
     </ClInclude>
     <ClInclude Include="src\Graphite\Core\Window.h">
       <Filter>src\Graphite\Core</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphite\Debug\Instrumentor.h">
+      <Filter>src\Graphite\Debug</Filter>
     </ClInclude>
     <ClInclude Include="src\Graphite\Events\ApplicationEvent.h">
       <Filter>src\Graphite\Events</Filter>
@@ -108,6 +117,9 @@
     <ClInclude Include="src\Graphite\Renderer\Buffer.h">
       <Filter>src\Graphite\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphite\Renderer\FrameBuffer.h">
+      <Filter>src\Graphite\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Graphite\Renderer\GraphicsContext.h">
       <Filter>src\Graphite\Renderer</Filter>
     </ClInclude>
@@ -123,6 +135,9 @@
     <ClInclude Include="src\Graphite\Renderer\Renderer.h">
       <Filter>src\Graphite\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphite\Renderer\Renderer2D.h">
+      <Filter>src\Graphite\Renderer</Filter>
+    </ClInclude>
     <ClInclude Include="src\Graphite\Renderer\RendererAPI.h">
       <Filter>src\Graphite\Renderer</Filter>
     </ClInclude>
@@ -135,10 +150,19 @@
     <ClInclude Include="src\Graphite\Renderer\VertexArray.h">
       <Filter>src\Graphite\Renderer</Filter>
     </ClInclude>
+    <ClInclude Include="src\Graphite\Viewport\Viewport.h">
+      <Filter>src\Graphite\Viewport</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphite\Viewport\ViewportLayer.h">
+      <Filter>src\Graphite\Viewport</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\OpenGLFramebuffer.h">
       <Filter>src\Platform\OpenGL</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h">
@@ -152,9 +176,6 @@
     </ClInclude>
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h">
       <Filter>src\Platform\OpenGL</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Platform\Windows\WindowsInput.h">
-      <Filter>src\Platform\Windows</Filter>
     </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>src\Platform\Windows</Filter>
@@ -1413,9 +1434,6 @@
     <ClInclude Include="vendor\stb_image\stb_image.h">
       <Filter>vendor\stb_image</Filter>
     </ClInclude>
-    <ClInclude Include="src\Graphite\Renderer\FrameBuffer.h" />
-    <ClInclude Include="src\Platform\OpenGL\OpenGLFrameBuffer.h" />
-    <ClInclude Include="src\Graphite\Core\Base.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Graphite\Core\Application.cpp">
@@ -1430,6 +1448,9 @@
     <ClCompile Include="src\Graphite\Core\Log.cpp">
       <Filter>src\Graphite\Core</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphite\Core\Window.cpp">
+      <Filter>src\Graphite\Core</Filter>
+    </ClCompile>
     <ClCompile Include="src\Graphite\ImGui\ImGuiBuild.cpp">
       <Filter>src\Graphite\ImGui</Filter>
     </ClCompile>
@@ -1437,6 +1458,12 @@
       <Filter>src\Graphite\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Graphite\Renderer\Buffer.cpp">
+      <Filter>src\Graphite\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphite\Renderer\FrameBuffer.cpp">
+      <Filter>src\Graphite\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphite\Renderer\GraphicsContext.cpp">
       <Filter>src\Graphite\Renderer</Filter>
     </ClCompile>
     <ClCompile Include="src\Graphite\Renderer\OrthographicCamera.cpp">
@@ -1451,6 +1478,9 @@
     <ClCompile Include="src\Graphite\Renderer\Renderer.cpp">
       <Filter>src\Graphite\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphite\Renderer\Renderer2D.cpp">
+      <Filter>src\Graphite\Renderer</Filter>
+    </ClCompile>
     <ClCompile Include="src\Graphite\Renderer\RendererAPI.cpp">
       <Filter>src\Graphite\Renderer</Filter>
     </ClCompile>
@@ -1463,10 +1493,19 @@
     <ClCompile Include="src\Graphite\Renderer\VertexArray.cpp">
       <Filter>src\Graphite\Renderer</Filter>
     </ClCompile>
+    <ClCompile Include="src\Graphite\Viewport\Viewport.cpp">
+      <Filter>src\Graphite\Viewport</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphite\Viewport\ViewportLayer.cpp">
+      <Filter>src\Graphite\Viewport</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp">
+      <Filter>src\Platform\OpenGL</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\OpenGLFramebuffer.cpp">
       <Filter>src\Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp">
@@ -1493,7 +1532,5 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Graphite\Renderer\FrameBuffer.cpp" />
-    <ClCompile Include="src\Platform\OpenGL\OpenGLFrameBuffer.cpp" />
   </ItemGroup>
 </Project>
