--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -24,7 +24,7 @@ Size=1280,720
 Collapsed=0
 
 [Window][Settings]
-ViewportPos=2936,232
+ViewportPos=1770,208
 ViewportId=0x1C33C293
 Size=296,701
 Collapsed=0
@@ -37,14 +37,14 @@ DockId=0x09EF459F,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1280,720
+Size=1414,782
 Collapsed=0
 
 [Window][Viewport]
-ViewportPos=999,337
-ViewportId=0x995B0CF8
-Size=1280,701
+Pos=0,19
+Size=1414,763
 Collapsed=0
+DockId=0x09EF459F,0
 
 [Table][0xA43C3885,3]
 RefScale=13
@@ -53,6 +53,6 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockSpace ID=0x09EF459F Window=0x9A404470 Pos=867,220 Size=1280,701 CentralNode=1 Selected=0x13926F0B
+DockSpace ID=0x09EF459F Window=0x9A404470 Pos=576,233 Size=1414,763 CentralNode=1 Selected=0x13926F0B
 DockSpace ID=0x3BC79352 Pos=923,231 Size=1280,701 CentralNode=1 Selected=0x13926F0B
 
