--- a/SandBox/imgui.ini
+++ b/SandBox/imgui.ini
@@ -37,12 +37,18 @@ DockId=0x09EF459F,0
 
 [Window][DockSpace]
 Pos=0,0
-Size=1414,782
+Size=1280,720
 Collapsed=0
 
 [Window][Viewport]
 Pos=0,19
-Size=1414,763
+Size=1280,701
+Collapsed=0
+DockId=0x09EF459F,0
+
+[Window][Global View]
+Pos=0,19
+Size=1280,701
 Collapsed=0
 DockId=0x09EF459F,0
 
@@ -53,6 +59,6 @@ Column 1  Width=56
 Column 2  Width=56
 
 [Docking][Data]
-DockSpace ID=0x09EF459F Window=0x9A404470 Pos=576,233 Size=1414,763 CentralNode=1 Selected=0x13926F0B
+DockSpace ID=0x09EF459F Window=0x9A404470 Pos=164,206 Size=1280,701 CentralNode=1 Selected=0x23B532D8
 DockSpace ID=0x3BC79352 Pos=923,231 Size=1280,701 CentralNode=1 Selected=0x13926F0B
 
