--- a/Graphite/Graphite.vcxproj.filters
+++ b/Graphite/Graphite.vcxproj.filters
@@ -1435,7 +1435,10 @@
     <ClInclude Include="src\Graphite\Core\PlatformDetection.h" />
     <ClInclude Include="src\Graphite\Viewport\Viewport.h" />
     <ClInclude Include="src\Graphite\Renderer\Camera.h" />
-    <ClInclude Include="src\Graphite\Renderer\CameraController.h" />
+    <ClInclude Include="src\Graphite\Viewport\ViewportCamera.h" />
+    <ClInclude Include="src\Graphite\Core\UUID.h" />
+    <ClInclude Include="src\Graphite\Viewport\ViewportGrid.h" />
+    <ClInclude Include="src\Graphite\Viewport\Renderer\ViewportRenderer.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Graphite\Core\Application.cpp">
@@ -1534,7 +1537,9 @@
     <ClCompile Include="vendor\stb_image\stb_image.cpp">
       <Filter>vendor\stb_image</Filter>
     </ClCompile>
-    <ClCompile Include="src\Graphite\Renderer\Camera.cpp" />
-    <ClCompile Include="src\Graphite\Renderer\CameraController.cpp" />
+    <ClCompile Include="src\Graphite\Viewport\ViewportCamera.cpp" />
+    <ClCompile Include="src\Graphite\Core\UUID.cpp" />
+    <ClCompile Include="src\Graphite\Viewport\ViewportGrid.cpp" />
+    <ClCompile Include="src\Graphite\Viewport\Renderer\ViewportRenderer.cpp" />
   </ItemGroup>
 </Project>
