--- a/Graphite/Graphite.vcxproj
+++ b/Graphite/Graphite.vcxproj
@@ -77,7 +77,7 @@
       <PrecompiledHeaderFile>gfpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;GF_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <DebugInformationFormat>EditAndContinue</DebugInformationFormat>
       <Optimization>Disabled</Optimization>
       <MinimalRebuild>false</MinimalRebuild>
@@ -100,7 +100,7 @@
       <PrecompiledHeaderFile>gfpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;GF_RELEASE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -126,7 +126,7 @@
       <PrecompiledHeaderFile>gfpch.h</PrecompiledHeaderFile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_CRT_SECURE_NO_WARNINGS;GLFW_INCLUDE_NONE;GF_DIST;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>src;vendor\spdlog\include;vendor\GLFW\include;vendor\Glad\include;vendor\imgui;vendor\glm;vendor\stb_image;vendor\entt\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <Optimization>Full</Optimization>
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
@@ -149,9 +149,9 @@
   <ItemGroup>
     <ClInclude Include="src\Graphite.h" />
     <ClInclude Include="src\Graphite\Core\Application.h" />
+    <ClInclude Include="src\Graphite\Core\Assert.h" />
     <ClInclude Include="src\Graphite\Core\Base.h" />
     <ClInclude Include="src\Graphite\Core\EntryPoint.h" />
-    <ClInclude Include="src\Graphite\Core\Assert.h" />
     <ClInclude Include="src\Graphite\Core\Input.h" />
     <ClInclude Include="src\Graphite\Core\KeyCodes.h" />
     <ClInclude Include="src\Graphite\Core\Layer.h" />
@@ -182,9 +182,9 @@
     <ClInclude Include="src\Graphite\Renderer\Texture.h" />
     <ClInclude Include="src\Graphite\Renderer\VertexArray.h" />
     <ClInclude Include="src\Graphite\Viewport\Renderer\ViewportRenderer.h" />
-    <ClInclude Include="src\Graphite\Viewport\ViewportGrid.h" />
-    <ClInclude Include="src\Graphite\Viewport\ViewportCamera.h" />
     <ClInclude Include="src\Graphite\Viewport\Viewport.h" />
+    <ClInclude Include="src\Graphite\Viewport\ViewportCamera.h" />
+    <ClInclude Include="src\Graphite\Viewport\ViewportGrid.h" />
     <ClInclude Include="src\Graphite\Viewport\ViewportLayer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
@@ -623,8 +623,6 @@
     <ClCompile Include="src\Graphite\ImGui\ImGuiBuild.cpp" />
     <ClCompile Include="src\Graphite\ImGui\ImGuiLayer.cpp" />
     <ClCompile Include="src\Graphite\Renderer\Buffer.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\Renderer\ViewportRenderer.cpp" />
-    <ClCompile Include="src\Graphite\Viewport\ViewportCamera.cpp" />
     <ClCompile Include="src\Graphite\Renderer\FrameBuffer.cpp" />
     <ClCompile Include="src\Graphite\Renderer\GraphicsContext.cpp" />
     <ClCompile Include="src\Graphite\Renderer\OrthographicCamera.cpp" />
@@ -636,7 +634,9 @@
     <ClCompile Include="src\Graphite\Renderer\Shader.cpp" />
     <ClCompile Include="src\Graphite\Renderer\Texture.cpp" />
     <ClCompile Include="src\Graphite\Renderer\VertexArray.cpp" />
+    <ClCompile Include="src\Graphite\Viewport\Renderer\ViewportRenderer.cpp" />
     <ClCompile Include="src\Graphite\Viewport\Viewport.cpp" />
+    <ClCompile Include="src\Graphite\Viewport\ViewportCamera.cpp" />
     <ClCompile Include="src\Graphite\Viewport\ViewportGrid.cpp" />
     <ClCompile Include="src\Graphite\Viewport\ViewportLayer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
